# RMK_project

./: .gitignore  CMakeLists.txt  MainApp.cpp  MainApp.h  ProductDataBase.cpp  ProductDataBase.h  ReadMe.md  Receipt.cpp  Receipt.h  Shift.cpp  Shift.h  main.cpp  products.csv
